[package]
name = "tmux_chooser"
version = "0.3.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"
readme="README.md"
license = "MIT"
homepage = "https://github.com/ambiso/tmux_chooser"
repository = "https://github.com/ambiso/tmux_chooser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.0.6"
ctrlc = "3.1"